removed unneeded link and fixed scrollbar

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,6 @@
 html, body {
     overflow: hidden;
+    overflow-y: hidden;
 }
 
 .hero {
